--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Days+One:400">
 
-
-
-
-
-
+    <link rel="stylesheet" href="contactus.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
 
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -27,7 +25,36 @@
 		"name": "",
 		"url": "index.html",
 		"logo": "images/nexet.png"
+
+    const viewBtn = document.querySelector(".view-modal"),
+    popup = document.querySelector(".popup"),
+    close = popup.querySelector(".close"),
+    field = popup.querySelector(".field"),
+    input = field.querySelector("input"),
+    copy = field.querySelector("button");
+
+    viewBtn.onclick = ()=>{
+      popup.classList.toggle("show");
+    }
+    close.onclick = ()=>{
+      viewBtn.click();
+    }
+
+    copy.onclick = ()=>{
+      input.select(); //select input value
+      if(document.execCommand("copy")){ //if the selected text copy
+        field.classList.add("active");
+        copy.innerText = "Copied";
+        setTimeout(()=>{
+          window.getSelection().removeAllRanges(); //remove selection from document
+          field.classList.remove("active");
+          copy.innerText = "Copy";
+        }, 3000);
+      }
+    }
 }</script>
+
+
 
     <meta property="og:title" content="Page 1">
     <meta property="og:type" content="website">
@@ -76,7 +103,6 @@
     <section class="u-align-left u-clearfix u-palette-1-dark-1 u-section-2" id="carousel_5dbc">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-custom-font u-font-courier-new u-text u-text-1">Although business matters can be complicated, it's our thing is to make them simple and reliable for you. </p>
-        <a href="mailto:admin@nexet.hk" class="u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-palette-4-dark-1 u-radius-2 u-btn-1">Contact us</a>
         <div class="u-palette-1-light-1 u-shape u-shape-circle u-shape-1"></div>
         <img class="u-align-left u-image u-image-default u-image-1" data-image-width="919" data-image-height="1300" src="images/pexels-photo-6964348.jpg">
         <div class="u-align-left u-container-style u-group u-shape-rectangle u-white u-group-1">
@@ -117,6 +143,26 @@
       </div>
     </section>
 
+    <button class="view-modal">Contact Us</button>
+    <div class="popup">
+      <header>
+        <span>Contact Us</span>
+        <div class="close"><i class="uil uil-times"></i></div>
+      </header>
+      <div class="content">
+        <p>Contact Us via</p>
+        <ul class="icons">
+          <a href="#"><i class="fab fa-whatsapp"></i></a>
+          <a href="#"><i class="fab fa-telegram-plane"></i></a>
+        </ul>
+        <p>Or copy link</p>
+        <div class="field">
+          <i class="url-icon uil uil-link"></i>
+          <input type="text" readonly value="example.com/share-link">
+          <button>Copy</button>
+        </div>
+      </div>
+    </div>
 
     <footer class="u-align-left u-clearfix u-footer u-white u-footer" id="sec-3fb5"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h5 class="u-custom-font u-font-raleway u-text u-text-default u-text-1">Nexet is a LLC.All rights reserved.</h5>
