--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;">
+<html style="font-size: 16px;" scroll-behavior: smooth;>
+
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -16,14 +17,18 @@
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Days+One:400">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
+
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
 		"url": "index.html",
 		"logo": "images/nexet.png"
-
 }</script>
+
 
 
 
@@ -66,11 +71,13 @@
                   <p class="u-text u-text-3">We give a full set of services from design to creative landing. Help you realize your entrepreneurial dreams. </p>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <section class="u-align-left u-clearfix u-palette-1-dark-1 u-section-2" id="carousel_5dbc">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-custom-font u-font-courier-new u-text u-text-1">Although business matters can be complicated, it's our thing is to make them simple and reliable for you. </p>
@@ -84,38 +91,52 @@
         </div>
       </div>
     </section>
+
+
+
+
     <section class="u-align-center u-clearfix u-image u-section-3" id="carousel_9c7e" data-image-width="3975" data-image-height="2981">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h2 class="u-custom-font u-text u-text-body-alt-color u-text-1">CO-partners</h2>
+        <h2 class="u-custom-font u-text u-text-body-alt-color u-text-1 ">CO-partners</h2>
         <div class="u-clearfix u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-center u-container-style u-image u-layout-cell u-left-cell u-size-12 u-size-20-md u-image-1" data-image-width="720" data-image-height="480">
                 <div class="u-container-layout u-container-layout-1"></div>
               </div>
-              <div class="u-align-center u-container-style u-layout-cell u-size-12 u-size-20-md u-white u-layout-cell-3">
+              <div class="u-align-center u-container-style u-layout-cell u-size-10 u-size-10-md u-white u-layout-cell-3">
                 <div class="u-container-layout u-valign-middle u-container-layout-3">
+                  <a href="https://neodev.team/" class="u-image" >
                   <img src="images/neodevpro.png" alt="" class="u-image u-image-contain u-image-default u-image-3" data-image-width="200" data-image-height="200">
+                  </a>
                 </div>
               </div>
-              <div class="u-align-center u-container-style u-layout-cell u-size-12 u-size-20-md u-white u-layout-cell-3">
+              <div class="u-align-center u-container-style u-layout-cell u-size-10 u-size-10-md u-white u-layout-cell-3">
                 <div class="u-container-layout u-valign-middle u-container-layout-3">
+                  <a href="https://github.com/UEFI4Phone/" class="u-image" >
                   <img src="images/UEFIPhone.png" alt="" class="u-image u-image-contain u-image-default u-image-3" data-image-width="200" data-image-height="200">
+                  </a>
                 </div>
               </div>
-              <div class="u-align-center u-container-style u-layout-cell u-size-12 u-size-30-md u-white u-layout-cell-4">
+              <div class="u-align-center u-container-style u-layout-cell u-size-10 u-size-10-md u-white u-layout-cell-3">
                 <div class="u-container-layout u-valign-middle u-container-layout-4">
-                  <img src="images/Jimei_logo.png" alt="" class="u-image u-image-contain u-image-default u-image-4" data-image-width="316" data-image-height="316">
+                  <a href="https://github.com/openjmu/" class="u-image" >
+                  <img src="images/Jimei_logo.png" alt="" class="u-image u-image-contain u-image-default u-image-3" data-image-width="200" data-image-height="200">
+                  </a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
     </section>
+
+
     <footer class="u-align-left u-clearfix u-footer u-white u-footer" id="sec-3fb5"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h5 class="u-custom-font u-font-raleway u-text u-text-default u-text-1">Nexet is a LLC.All rights reserved.</h5>
       </div></footer>
   </body>
+
 
 </html>
