--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
 
 
-    <section class="u-align-center u-clearfix u-palette-2-dark-1 u-section-3" id="carousel_9c7e" data-image-width="3975" data-image-height="2981">
+    <section class="u-align-center u-clearfix u-white u-palette-2-dark-1 u-section-3" id="carousel_9c7e" data-image-width="3975" data-image-height="2981">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h2 class="u-custom-font u-text u-text-body-alt-color u-text-1 ">CO-partners</h2>
+        <h2 class="u-custom-font u-text  u-text-1 ">CO-partners</h2>
         <div class="u-clearfix u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
